# AdventOfCode

./: .clang-format  README.md
.github/workflows/: build.yml
2024/cpp/: CMakeLists.txt
2024/cpp/day10/: main.cpp
2024/cpp/day12/: main.cpp
2024/cpp/day13/: main.cpp
2024/cpp/day14/: main.cpp
2024/cpp/day15/: main.cpp
2024/cpp/day16/: input.txt  main.cpp
2024/cpp/day21/: main.cpp
2024/cpp/day4/: main.cpp
2024/cpp/day6/: main.cpp
2024/cpp/day8/: main.cpp
2024/cpp/day9/: main.cpp
2024/python/day1/: distance_sum.py
2024/python/day11/: stones.py
2024/python/day18/: steps.py
2024/python/day19/: onsen_towels.py
2024/python/day2/: report_safety.py
2024/python/day20/: cheats.py
2024/python/day22/: secret.py
2024/python/day23/: lan_party.py
2024/python/day24/: registers.py
2024/python/day25/: lock_key.py
2024/python/day3/: mulling.py
2024/python/day5/: page_ordering.py
2024/python/day7/: operand_combos.py
2025/cpp/day1/: main.cpp
2025/cpp/day10/: main.cpp
2025/cpp/day11/: main.cpp
2025/cpp/day2/: main.cpp
2025/cpp/day3/: main.cpp
2025/cpp/day4/: main.cpp
2025/cpp/day5/: main.cpp
2025/cpp/day6/: main.cpp
2025/cpp/day7/: main.cpp
2025/cpp/day8/: main.cpp
2025/cpp/day9/: main.cpp
